# business-stories

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml  run_full_auto_approve.sh  run_orchestrator.sh
assets/branding/: README.txt
assets/generic_stock/: manifest.json
assets/music_library/: manifest.json
assets/sfx_library/: manifest.json
deployment/: com.business-stories.orchestrator.plist
drafts/: EXAMPLE_toys_r_us.json
pipeline/: __init__.py  asr.py  browser.py  config.py  constraints.py  elevenlabs.py  ffmpeg_builder.py  flux.py  generic_stash.py  grok.py  hermes_orchestrator.py  llm.py  music_library.py  performance_summary.py  sfx_library.py  shorts.py  state.py  thumbnails.py  titles.py  trends.py  tts.py  vlm.py  wikimedia.py  youtube_analytics.py
pipeline/lexicon/: pronunciation_overrides.yaml
pipeline/lint/: forbidden_phrases.txt  forbidden_substitutions.yaml
pipeline/prompts/: beat_sheet.txt  brand_safety_review.txt  character_iconography.txt  company_hq_consolidate.txt  fact_extract.txt  fact_merge.txt  fact_verify.txt  grok_text_correction.txt  iconic_assets.txt  script_critique.txt  script_generate.txt  sfx_cue_prompts.yaml  shorts_select.txt  title_generate.txt  title_variants.txt  topic_discovery.txt
pipeline/sources/: __init__.py
pipeline/stages/: __init__.py  s01_topic_discovery.py  s02_source_gathering.py  s03_fact_extraction.py  s04_fact_verification.py  s05_asset_hunt.py  s06_script_generation.py  s07_script_critique.py  s08_beat_sheet.py  s09_flux_render.py  s10_kokoro_render.py  s11_audio_post.py  (+3 more)
(+7 files in other folders)
