[project]
name = "business-stories-pipeline"
version = "0.2.0"
description = "13-stage faceless YouTube pipeline for comic-book Business & Brand Origin Stories"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "pillow>=10.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "soundfile>=0.12",
    "num2words>=0.5.13",
    "sentence-transformers>=2.5",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "imagehash>=4.3",
    "tenacity>=8.2",
    "tqdm>=4.66",
    "pydantic>=2.5",
]

[project.optional-dependencies]
# YouTube Analytics writeback (Batch E performance loop).
youtube = ["google-api-python-client>=2.110", "google-auth-oauthlib>=1.2"]
# Premium TTS (Batch D 2026-05-27, wired but disabled by default).
elevenlabs = ["elevenlabs>=1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline*"]
